--- a/resources/assets/stylesheets/less/badges.less
+++ b/resources/assets/stylesheets/less/badges.less
@@ -27,7 +27,7 @@
         white-space: nowrap;
         text-shadow: rgba(0, 0, 0, 0.496094) 0px -1px 0px;
 
-        .border-radius(9px);
-        .box-shadow(black 0px 1px 3px);
+        border-radius: 9px;
+        box-shadow: black 0px 1px 3px;
     }    
 }
