--- a/resources/assets/stylesheets/less/big-image-handler.less
+++ b/resources/assets/stylesheets/less/big-image-handler.less
@@ -15,9 +15,9 @@
     background: fadeout(#000, 30%);  
     cursor: zoom-out;
 
-    .flex();
-    .flex-justify-content(center);
-    .flex-align-items(center);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   
     // The actual oversized image is loaded as a background image so we can
     // use the background-size option "contain" which will ensure that the
