--- a/resources/assets/stylesheets/less/cronjobs.less
+++ b/resources/assets/stylesheets/less/cronjobs.less
@@ -50,8 +50,8 @@
     }
     tbody:last-child .parameters {
         border-bottom: 1px solid #888;
-        .border-bottom-right-radius(3px);
-        .border-bottom-left-radius(3px);
+        border-bottom-right-radius: 3px;
+        border-bottom-left-radius: 3px;
     }
 }
 
