--- a/resources/assets/stylesheets/less/mobile.less
+++ b/resources/assets/stylesheets/less/mobile.less
@@ -17,8 +17,8 @@
     }
     #index, #request_new_password, #web_migrate {
         div.index_container {
-            .flex();
-            .flex-direction-column();
+            display: flex;
+            flex-direction: column;
             top: 40px;
 
             .messagebox {
