--- a/resources/assets/stylesheets/less/profile.less
+++ b/resources/assets/stylesheets/less/profile.less
@@ -3,13 +3,13 @@
 }
 
 .profile-view {
-    .flex();
+    display: flex;
 }
 .profile-view-aside {
-    .flex-item(1, 0, auto);
+    flex: 1 0 auto;
 }
 .profile-view-main {
-    .flex-item(1, 1, 100%);
+    flex: 1 1 100%;
     padding: 0 1em;
 }
 .profile-view-actions {
