--- a/resources/assets/stylesheets/less/studygroup.less
+++ b/resources/assets/stylesheets/less/studygroup.less
@@ -2,7 +2,7 @@ ul.studygroup-gallery {
     list-style: none;
     padding-left: 15px;
     li {
-        .box-sizing(border-box);
+        box-sizing: border-box;
         vertical-align: top;
         text-align: center;
         margin: 5px;
