--- a/resources/assets/stylesheets/less/tour.less
+++ b/resources/assets/stylesheets/less/tour.less
@@ -22,7 +22,7 @@
     padding: 10px 10px;
     font-family: @font-family-base;
     overflow-y: auto;
-    .box-shadow(0px 0px 8px rgba(0,0,0,0.5));
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.5);
 }
 
 #tour_title {
@@ -44,7 +44,7 @@
     background-color: #28497c;
     color: #ffffff; border:
     solid 1px #aaaaaa;
-    .box-shadow(0px 0px 8px rgba(0,0,0,0.5));
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.5);
 }
 
 #tour_tip_interactive {
@@ -58,7 +58,7 @@
     background-color: #ffbd33;
     color: #000000;
     border: solid 1px #aaaaaa;
-    .box-shadow(0px 0px 8px rgba(0,0,0,0.5));
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.5);
 }
 
 #tour_tip_title {
