--- a/resources/assets/stylesheets/less/ajax.less
+++ b/resources/assets/stylesheets/less/ajax.less
@@ -22,7 +22,7 @@
     .notification {
         background: rgba(255, 255, 255, 0.5) url("@{image-path}/ajax_indicator_small.gif") center center no-repeat;
         border: 1px solid #ccc;
-        .border-radius(8px);
+        border-radius: 8px;
         display: inline-block;
         height: 16px;
         margin: 0 3px;
