--- a/resources/assets/stylesheets/less/article.less
+++ b/resources/assets/stylesheets/less/article.less
@@ -3,7 +3,7 @@ article.studip {
     border-style: solid;
     border-width: 1px;
     margin-bottom: 10px;
-    .transition(all 300ms ease 0s);
+    transition: all 300ms ease 0s;
     padding: 10px;
 
     &:last-child {
@@ -11,10 +11,10 @@ article.studip {
     }
 
     header {
-        .flex();
-        .flex-justify-content(flex-end);
-        .flex-align-items(center);
-        .flex-wrap(wrap);
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        flex-wrap: wrap;
 
         padding: 2px;
         background-color: @content-color-20;
@@ -23,11 +23,11 @@ article.studip {
 
         > * {
             /* Try to get header aligned by forcing children into centering */
-            .flex();
-            .flex-align-items(center);
+            display: flex;
+            align-items: center;
 
             &:first-child {
-                .flex-item(1);
+                flex: 1;
             }
         }
 
@@ -39,8 +39,8 @@ article.studip {
             font-size: medium;
 
             > a {
-                .flex();
-                .flex-align-items(center);
+                display: flex;
+                align-items: center;
                 img, svg {
                     margin-right: 5px;
                 }
@@ -48,8 +48,8 @@ article.studip {
         }
 
         nav {
-            .flex();
-            .flex-align-items(center);
+            display: flex;
+            align-items: center;
             padding: 2px;
             overflow: hidden;
 
@@ -77,7 +77,7 @@ article.studip {
         > header {
             .icon('before', 'arr_1right', 'clickable');
             &:before {
-                .transition(all 200ms ease 0s);
+                transition: all 200ms ease 0s;
                 margin-left: 5px;
             }
             margin-bottom: -10px;
@@ -93,7 +93,7 @@ article.studip {
             > header {
                 margin-bottom: 10px;
                 &:before {
-                    .rotate(90deg);
+                    transform: rotate(90deg);
                 }
             }
             > *:not(header) {
