--- a/resources/assets/stylesheets/less/buttons.less
+++ b/resources/assets/stylesheets/less/buttons.less
@@ -2,7 +2,7 @@
     background: white;
     border: 1px solid @base-color;
     border-radius: 0;
-    .box-sizing(border-box);
+    box-sizing: border-box;
     color: @base-color;
     cursor: pointer;
     display: inline-block;
@@ -33,7 +33,7 @@
     }
 
     &.disabled, &[disabled] {
-        .box-shadow(none);
+        box-shadow: none;
         background: @light-gray-color-20;
         cursor: default;
         opacity: 0.65;
@@ -43,7 +43,7 @@
         }
     }
 
-    .transition(none);
+    transition: none;
 }
 
 a.button, button.button {
