--- a/resources/assets/stylesheets/less/calendar.less
+++ b/resources/assets/stylesheets/less/calendar.less
@@ -150,12 +150,12 @@ td.weekdayevents {
 }
 
 nav.calendar-nav {
-  .flex();
-  .flex-align-items(center);
+  display: flex;
+  align-items: center;
   padding-bottom: 1em;
 
   > div {
-    .flex-item(1, 1);
+    flex: 1 1 auto;
   }
 
   .calhead {
