--- a/resources/assets/stylesheets/less/content_box.less
+++ b/resources/assets/stylesheets/less/content_box.less
@@ -3,12 +3,12 @@ section.contentbox {
     border-style: solid;
     border-width: 1px;
     margin-bottom: 10px;
-    .transition(all 300ms ease 0s);
+    transition: all 300ms ease 0s;
 
     header {
-        .flex();
-        .flex-wrap(wrap);
-        .flex-justify-content(space-between);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
 
         padding: 2px;
         background-color: @content-color-20;
@@ -72,7 +72,7 @@ section.contentbox {
             max-height: 0px;
             opacity: 0;
             overflow: auto;
-            .transition(opacity 0.3s);
+            transition: opacity 0.3s;
         }
 
 
@@ -121,7 +121,7 @@ section.contentbox {
             h1 a {
                 .icon('before', "arr_1right", 'clickable');
                 &:before {
-                    .transition(all 200ms ease 0s);
+                    transition: all 200ms ease 0s;
                     margin-right: 2px;
                 }
                 display: flex;
@@ -184,14 +184,14 @@ section.contentbox {
             max-height: 0px;
             opacity: 0;
             overflow: auto;
-            .transition(opacity 0.3s);
+            transition: opacity 0.3s;
         }
 
         &.open {
             > p, > section, > footer, > div {
                 max-height: none;
                 opacity: 1;
-                .transition(opacity 0.3s);
+                transition: opacity 0.3s;
             }
 
             footer {
@@ -199,7 +199,7 @@ section.contentbox {
             }
 
             header h1 a::before {
-                .rotate(90deg);
+                transform: rotate(90deg);
             }
         }
 
