--- a/resources/assets/stylesheets/less/coursewizard.less
+++ b/resources/assets/stylesheets/less/coursewizard.less
@@ -33,8 +33,8 @@ change order for AdvancedBasicDataWizardStep
 so we do not have to copy the basicdata/index.php
 */
 form.course-wizard-step-0 {
-   .flex();
-   .flex-direction-column();
+   display: flex;
+   flex-direction: column;
     
    > * {
         order: 1;
