--- a/resources/assets/stylesheets/less/css_tree.less
+++ b/resources/assets/stylesheets/less/css_tree.less
@@ -57,7 +57,7 @@
             cursor: pointer;
 
             &:before {
-                .transition(transform @css-tree-delay);
+                transition: transform @css-tree-delay;
                 vertical-align: baseline;
             }
         }
@@ -65,7 +65,7 @@
             max-height: 0;
             opacity: 0;
 
-            .transition(all @css-tree-delay);
+            transition: all @css-tree-delay;
         }
         ~ input[type=radio] + label {
             margin-left: 0;
@@ -77,7 +77,7 @@
                 .csstransforms & {
                     .icon('before', 'arr_1right', 'clickable');
                     &:before {
-                        .rotate(90deg);
+                        transform: rotate(90deg);
                     }
                 }
             }
