--- a/resources/assets/stylesheets/less/documents.less
+++ b/resources/assets/stylesheets/less/documents.less
@@ -24,8 +24,8 @@
                 box-shadow: 0 4px 3px #aaa;
             }
             ul {
-                .flex();
-                .flex-direction-column-reverse();
+                display: flex;
+                flex-direction: column-reverse;
             }
         }
     
@@ -104,7 +104,7 @@
 }
 
 fieldset.document-admin-search label {
-    .box-sizing(border-box);
+    box-sizing: border-box;
     display: inline-block;
     width: 49%;
 }
