--- a/resources/assets/stylesheets/less/links.less
+++ b/resources/assets/stylesheets/less/links.less
@@ -12,7 +12,7 @@ a, a:link, a:visited {
     }
 }
 a[href] {
-    .transition(color 0.3s);
+    transition: color 0.3s;
 }
 a[disabled] {
     pointer-events: none;
