--- a/resources/assets/stylesheets/less/messagebox.less
+++ b/resources/assets/stylesheets/less/messagebox.less
@@ -88,16 +88,16 @@ div.messagebox_details {
     bottom: 0;
     z-index: 9999;
 
-    .flex();
-    .flex-align-items(center);
-    .flex-justify-content(center);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     padding: 10vh 20vw;
 
     .messagebox {
         display: inline-block;
         zoom: 1; // IE :(
-        .box-sizing(border-box);
+        box-sizing: border-box;
 //        position: relative;
         vertical-align: middle;
         margin: auto;
@@ -113,7 +113,7 @@ div.messagebox_details {
         background-color: white;
         background-image: url("@{image-path}/messagebox/question.png");
         background-size: 32px 32px;
-        .box-shadow(0px 0px 8px rgba(0, 0, 0, 0.5));
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
 
         .content {
             max-height: 200px;
@@ -128,7 +128,7 @@ div.messagebox_details {
     .ui-dialog {
         display: inline-block;
         zoom: 1; // IE :(
-        .box-sizing(border-box);
+        box-sizing: border-box;
         position: relative;
         vertical-align: middle;
         margin: auto;
