--- a/resources/assets/stylesheets/less/messages.less
+++ b/resources/assets/stylesheets/less/messages.less
@@ -18,7 +18,7 @@ a.message-tag {
 #message-move-handle {
     background-color: rgba(255, 255, 255, 0.3);
     padding: 3px;
-    .border-radius(5px);
+    border-radius: 5px;
     border: thin solid #000;
 
     .icon('before', 'mail', 'clickable', 20, 2px);
@@ -79,8 +79,8 @@ a.message-tag {
 }
 
 .message-search-wrapper {
-    .flex();
-    .flex-justify-content(flex-start);
+    display: flex;
+    justify-content: flex-start;
     margin-top: 1ex;
 
     > * {
