--- a/resources/assets/stylesheets/less/navigation-hoverborder.less
+++ b/resources/assets/stylesheets/less/navigation-hoverborder.less
@@ -55,7 +55,7 @@ body:not(.fixed) #barTopMenu {
     .overflow li:hover {
         .border-beneath('light', 2px, 2px);
         &::after {
-            .translate(0, -4px);
+            transform: translate(0, -4px);
         }
     }
 }
