--- a/resources/assets/stylesheets/less/personal-notifications.less
+++ b/resources/assets/stylesheets/less/personal-notifications.less
@@ -1,5 +1,4 @@
 #notification_marker {
-    //.transition(all 1s);
     width: 48px;
     margin-left: 0px;
     padding-left: 0px;
@@ -25,7 +24,6 @@
 
     @list-width: 400px;
 
-    //.transition(all 1s);
     width: 49px;
     height: 30px;
     /*border: thin solid @dark-gray-color-20;*/
@@ -86,7 +84,7 @@
         position: absolute;
         width: @list-width;
         max-width: @list-width;
-        .box-shadow(1px 1px 1px @light-gray-color-80);
+        box-shadow: 1px 1px 1px @light-gray-color-80;
 
         // Without this, buttons or message boxes would appear on top of the list
         z-index: 2;
@@ -136,9 +134,9 @@
                 border-top: 0;
             }
             .content {
-                .flex();
-                .flex-direction-row();
-                .flex-wrap(nowrap);
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
 
                 .avatar {
                     @avatar-size: 40px;
@@ -193,7 +191,7 @@
         z-index: 3;
 
         // Create blind effect to hide/display this links smoothly
-        .transition(all 300ms);
+        transition: all 300ms;
         max-height: 31px;
 
         &.hidden {
