--- a/resources/assets/stylesheets/less/raumzeit.less
+++ b/resources/assets/stylesheets/less/raumzeit.less
@@ -31,21 +31,21 @@ div.at_least_one_teacher {
                 max-height: 0px;
                 opacity: 0;
                 padding: 0;
-                .transition(opacity 0.3s);
+                transition: opacity 0.3s;
             }
 
             &:not(.open) header ~ * {
                 max-height: 0px;
                 opacity: 0;
                 overflow: auto;
-                .transition(opacity 0.3s);
+                transition: opacity 0.3s;
             }
 
             &.open {
                 > p, > section, > footer, > div {
                     max-height: none;
                     opacity: 1;
-                    .transition(opacity 0.3s);
+                    transition: opacity 0.3s;
                 }
 
                 footer {
@@ -53,7 +53,7 @@ div.at_least_one_teacher {
                 }
 
                 header h1 a::before {
-                    .rotate(90deg);
+                    transform: rotate(90deg);
                 }
             }
         }
