--- a/resources/assets/stylesheets/less/sidebar.less
+++ b/resources/assets/stylesheets/less/sidebar.less
@@ -1,6 +1,6 @@
 #layout-sidebar {
     background: #fff;
-    .flex-item(0, 1);
+    flex: 0 1 auto;
     position: relative;
     left: 0px;
     margin-right: 5px;
@@ -79,7 +79,7 @@ div#sidebar-navigation {
         display: block;
     }
     .widget-content a:only-child {
-        .box-sizing(border-box);
+        box-sizing: border-box;
         line-height: 16px;
     }
     span[disabled] {
@@ -100,7 +100,7 @@ div#sidebar-navigation {
     &.sidebar-views > li.active {
         background: @activity-color-40;
         margin-left: -5px;
-        .box-shadow(inset 0 0 0 1px @activity-color);
+        box-shadow: inset 0 0 0 1px @activity-color;
         #arrow > .right-border(14px, @activity-color-40, 1px, @activity-color, -5px);
         a {
             color: @base-color;
@@ -274,7 +274,7 @@ select.sidebar-selectlist {
 
 .sidebar-search {
     .needles input[type=text] {
-        .box-sizing(border-box);
+        box-sizing: border-box;
         border: 1px solid @base-color-60;
         border-right-width: 30px;
         float: left;
