--- a/resources/assets/stylesheets/less/tooltip.less
+++ b/resources/assets/stylesheets/less/tooltip.less
@@ -5,8 +5,8 @@
 
     background-color: #ddd;
     border: 2px solid #ccc;
-    .border-radius(4px);
-    .box-shadow(0 1px 2px fade(#000, 60%), 0 1px 0 fade(#fff, 50%) inset);
+    border-radius: 4px;
+    box-shadow: 0 1px 2px fade(#000, 60%), 0 1px 0 fade(#fff, 50%) inset;
     font-size: @font-size-base;
     margin-bottom: 8px;
     max-width: 230px;
@@ -18,7 +18,8 @@
     white-space: pre-line;
     z-index: 10000;
 
-    .hyphens();
+    word-wrap: break-word;
+    hyphens: auto;
 }
 
 .tooltip {
